[tool.poetry]
name = "transport-planner"
version = "0.1.0"
description = ""
authors = ["Jeremy <jeremyyong0101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
atomic-agents = "^1.1.0"
openai = "^1.75.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
